changing css to make the elements visible correctly when in landscape

--- a/src/components/MainPage/index.css
+++ b/src/components/MainPage/index.css
@@ -239,7 +239,59 @@ a:hover{
     
   }
 
+  @media (max-width: 700px) and (orientation: landscape) { 
+    .dl-area{
+        /* background-color: aqua; */
+        /* height: 100%; */
+        margin-top:60px;
+      
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: space-around;
+        border-color: red;
+        /* background-color: darkblue; */
+        /* border-radius: 20px; */
+        /* box-shadow: 2px 2px 2px 2px rgba(255,255, 255, 0.9); */
+        padding: 20px;
+    }
+    .question{
+        font-size: 22px;
+        font-weight: bold;
+    }
 
+    .question-area{
+        width: 280px;
+        font-weight: bold;
+    }
+
+    .dl-button{   
+        font-size: 15px; 
+        width: 120px;
+        height: 27px;
+    }
+    
+    .main-area{
+        /* margin-top: 90px; */
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        /* height: 120vh; */
+        /* width: 100%; */
+        background-color:#003562; 
+    
+    }
+    .image-area{
+   
+        background-color:#eee;
+        height: 55vh;
+        width: 55vh;
+        border-radius: 250px;
+    
+    }
+
+  }
   @media only screen and (max-width: 480px) {
 
     .area-img{
